[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project253"
version = "1.0.0"
description = "Video Enhancement for Object Detection in Adverse Conditions"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "torchaudio>=2.9.0",
    "ultralytics>=8.3.0",
    "dill>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.dip", "src.utils"]



